folder structure changed

--- a/crossTab.html
+++ b/crossTab.html
@@ -17,8 +17,8 @@
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
 
 
-<script type="text/javascript" src="./js/modelChart.js"></script>
-<script type="text/javascript" src="./js/productType.js"></script>
+<script type="text/javascript" src="./js/model/modelChart.js"></script>
+<script type="text/javascript" src="./js/model/productType.js"></script>
 
 
 <script type="text/javascript" src="./js/parsing.js"></script>
