initial graph data plotted

--- a/crossTab.html
+++ b/crossTab.html
@@ -17,10 +17,10 @@
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
 
 
-<script type="text/javascript" src="./js/model/modelChart.js"></script>
+
 <script type="text/javascript" src="./js/model/productType.js"></script>
 
-
+<script type="text/javascript" src="./js/drawChart.js"></script>
 <script type="text/javascript" src="./js/parsing.js"></script>
 
 <script type="text/javascript" src="./js/controller.js"></script>
