--- a/crossTab.html
+++ b/crossTab.html
@@ -1,12 +1,12 @@
 <html>
 <head>
     <title>CrossTab</title>    
-   
+   <link rel="stylesheet" type="text/css" href="crossTab.css"/>
 </head>
 <body >
-<center><h2>Main Caption</h2></center>
+<!-- <center><h2>Main Caption</h2></center>
     <center>Sub Caption</center>
-   <br><br>
+   <br><br> -->
 
  
  
