--- a/index .html
+++ b/index .html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" type="text/css" href="css/crossTab.css"/>
 </head>
 <body >
+<div id="heading">
 <center><h2>Main Caption</h2></center>
     <center>Sub Caption</center>
    <br><br>
-
+</div>
  
  
 
