addtext dupli removed

--- a/index .html
+++ b/index .html
@@ -39,6 +39,8 @@
 <script type="text/javascript" src="./js/chartCategory/common/listener.js"></script>
 <script type="text/javascript" src="./js/controller/plotGraph.js"></script>
 <script type="text/javascript" src="./js/chartCategory/lineChart/crossHair.js"></script>
+<script type="text/javascript" src="./js/controller/axis.js"></script>
+
 <script type="text/javascript" src="./js/controller/drawYAxis.js"></script>
 <script type="text/javascript" src="./js/controller/drawXAxis.js"></script>
 <script type="text/javascript" src="./js/chartCategory/common/chartFunc.js"></script>
