--- a/index .html
+++ b/index .html
@@ -18,7 +18,7 @@
 
 
 </body>
-<script type="text/javascript" src="./js/datastructure.json"></script>
+<script type="text/javascript" src="./js/dataStruct.json"></script>
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
 <script type="text/javascript" src="./js/model/model.js"></script>
 <!--<script type="text/javascript" src="./js/datastructure.json"></script>-->
@@ -53,7 +53,7 @@
 
 
 
-
+<script type="text/javascript" src="./js/DAO/parsingData.js"></script>
 <script type="text/javascript" src="./js/DAO/calValues.js"></script>
 <script type="text/javascript" src="./js/controller/controller.js"></script>
 
