gencolor file created

--- a/index .html
+++ b/index .html
@@ -27,7 +27,7 @@
 
 
 <script type="text/javascript" src="./js/model/productType.js"></script>
-
+<script type="text/javascript" src="./js/chartCategory/common/genColor.js"></script>
 <script type="text/javascript" src="./js/chartCategory/CrossTab/crossTab.js"></script>
 <script type="text/javascript" src="./js/DAO/parsing.js"></script>
 
