global variables will be made local

--- a/index .html
+++ b/index .html
@@ -20,7 +20,7 @@
 </body>
 <script type="text/javascript" src="./json/dataStruct.json"></script>
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
-<script type="text/javascript" src="./json/model/model.js"></script>
+<script type="text/javascript" src="./js/model/model.js"></script>
 <!--<script type="text/javascript" src="./js/datastructure.json"></script>-->
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
 
@@ -52,7 +52,7 @@
 
 
 
-
+<script type="text/javascript" src="./js/model/globalVariables.js"></script>
 <script type="text/javascript" src="./js/DAO/parsingData.js"></script>
 <script type="text/javascript" src="./js/DAO/calValues.js"></script>
 <script type="text/javascript" src="./js/controller/controller.js"></script>
