--- a/index .html
+++ b/index .html
@@ -18,7 +18,7 @@
 
 
 </body>
-<script type="text/javascript" src="./json/dataStruct.json"></script>
+<script type="text/javascript" src="./json/datastructure.json"></script>
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
 <script type="text/javascript" src="./js/model/model.js"></script>
 <!--<script type="text/javascript" src="./js/datastructure.json"></script>-->
