--- a/index .html
+++ b/index .html
@@ -18,13 +18,13 @@
 
 
 </body>
-<script type="text/javascript" src="./json/datastructure.json"></script>
+<script type="text/javascript" src="./json/dataStruct.json"></script>
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
 <script type="text/javascript" src="./js/model/model.js"></script>
 <!--<script type="text/javascript" src="./js/datastructure.json"></script>-->
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
 
-
+<script type="text/javascript" src="./js/chartCategory/common/plotColumnBar.js"></script>
 
 <script type="text/javascript" src="./js/model/productType.js"></script>
 <script type="text/javascript" src="./js/chartCategory/common/genColor.js"></script>
