--- a/indexgulp.html
+++ b/indexgulp.html
@@ -18,9 +18,9 @@
 
 
 </body>
-<script type="text/javascript" src="./json/dataStruct.json"></script>
-<!-- <script type="text/javascript" src="./js/chart.js"></script> -->
-<script type="text/javascript" src="./js/model/model.js"></script>
+<script type="text/javascript" src="./build/json/dataStruct.json"></script>
+<script type="text/javascript" src="./build/js/chart.min.js"></script> 
+
 <!--<script type="text/javascript" src="./js/datastructure.json"></script>-->
 <!-- <script type="text/javascript" src="./js/chart.js"></script> -->
 
